fix overflow-x

--- a/static/main.css
+++ b/static/main.css
@@ -15,6 +15,7 @@ body {
 * {
     font-family: Montserrat, sans-serif;
     color: var(--black);
+    overflow-x: hidden;
 }
 
 section {
